# GaloisGroups

./: .gitignore  .travis.yml  Makefile.am  Makefile.in  PackageInfo.g  README.md  autogen.sh  configure  configure.ac  init.g  makedoc.g  read.g
.github/workflows/: CI.yml
gap/: DescentTable.gd  DescentTable.gi  GaloisGroups.gd  GaloisGroups.gi  RelativeInvariants.gd  RelativeInvariants.gi  ShortCosets.gd  ShortCosets.gi  TransitiveLattice.gi  relative_invariant.gd  relative_invariant.gi  relative_invariants.gd  relative_invariants.gi  short_cosets.gd  short_cosets.gi  table.gd  table.gi  transitive_lattice.gd  transitive_lattice.gi
src/: GaloisGroups.c
tst/: galois.tst  relative_invariants.tst  short_cosets.tst  testall.g  transitive_maximals.g
